# anthropic-sdk-rs

./: .gitignore  Cargo.toml  README.md  cargo.toml
anthropic-ai-sdk/: Cargo.toml  README.md
anthropic-ai-sdk/src/: admin.rs  admin_client.rs  client.rs  clients.rs  lib.rs  message_batches.rs  messages.rs  models.rs
anthropic-ai-sdk/src/types/: admin.rs  message.rs  message_batches.rs  mod.rs  model.rs
anthropic-ai-sdk/src/types/admin/: api_keys.rs
anthropic-sdk/: Cargo.toml  README.md
anthropic-sdk/src/: clients.rs  lib.rs  messages.rs  models.rs
anthropic-sdk/src/types/: client.rs  message.rs  model.rs  models.rs
examples/admin/api-keys/get-api-key/: Cargo.toml
examples/admin/api-keys/get-api-key/src/: main.rs
examples/admin/api-keys/list-api-keys/: Cargo.toml
examples/admin/api-keys/list-api-keys/src/: main.rs
examples/admin/api-keys/update-api-key/: Cargo.toml
examples/admin/api-keys/update-api-key/src/: main.rs
examples/count-message-tokens/: Cargo.toml
examples/count-message-tokens/src/: main.rs
examples/get-a-model/: Cargo.toml
examples/get-a-model/src/: main.rs
examples/list-models/: Cargo.toml
examples/list-models/src/: main.rs
examples/message-batches/cancel-a-message-batch/: Cargo.toml
examples/message-batches/cancel-a-message-batch/src/: main.rs
examples/message-batches/create-a-message-batch/: Cargo.toml
examples/message-batches/create-a-message-batch/src/: main.rs
examples/message-batches/delete-a-message-batch/: Cargo.toml
examples/message-batches/delete-a-message-batch/src/: main.rs
examples/message-batches/list-message-batches/: Cargo.toml
examples/message-batches/list-message-batches/src/: main.rs
examples/message-batches/retrieve-message-batch/: Cargo.toml
examples/message-batches/retrieve-message-batch-results/: Cargo.toml
examples/message-batches/retrieve-message-batch-results/src/: main.rs
examples/message-batches/retrieve-message-batch/src/: main.rs
examples/messages/: Cargo.toml
examples/messages/count-message-tokens/: Cargo.toml
examples/messages/count-message-tokens/src/: main.rs
examples/messages/messages/: Cargo.toml
examples/messages/messages/src/: main.rs
examples/messages/src/: main.rs
examples/messages/stream-messages/: Cargo.toml
examples/messages/stream-messages/src/: main.rs
examples/models/get-a-model/: Cargo.toml
examples/models/get-a-model/src/: main.rs
examples/models/list-models/: Cargo.toml
examples/models/list-models/src/: main.rs
