[workspace]
members = [
    "anthropic-ai-sdk",
    "examples/messages/count-message-tokens",
    "examples/messages/messages",
    "examples/models/list-models",
    "examples/models/get-a-model",
    "examples/message-batches/create-a-message-batch",
    "examples/message-batches/list-message-batches",
    "examples/message-batches/retrieve-message-batch",
    "examples/message-batches/retrieve-message-batch-results",
    "examples/message-batches/cancel-a-message-batch",
    ]
default-members = ["anthropic-ai-sdk"]
resolver = "2"
