[package]
name = "anthropic-ai-sdk"
version = "0.1.2"
edition = "2024"
authors = ["Katsuhiro Honda<freewave3@gmail.com>"]
categories = ["api-bindings"]
description = "An unofficial Rust SDK for Anthropic's Claude AI API"
keywords = ["anthropic", "sdk", "ai"]
license = "MIT"
repository = "https://github.com/katsuhirohonda/anthropic-sdk-rs/tree/main/anthropic-ai-sdk"
rust-version = "1.85.0"

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
async-trait = "0.1.85"
tracing = "0.1.41"
serde_json = "1.0.135"
time = { version = "0.3.37", features = ["serde", "serde-well-known"] }
tokio = { version = "1.43.0", features = ["full"] }