[package]
name = "anthropic-sdk"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
async-trait = "0.1.85"
tracing = "0.1.41"
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "serde-well-known"] }